Fix box shadow bleeding into footer
Add position: relative to put the footer higher in the stacking order

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -162,6 +162,10 @@ header.govuk-header--yellow .govuk-phase-banner {
   font-weight: bold;
 }
 
+.govuk-footer {
+  position: relative;
+}
+
 @media (max-width: 504px) {
   footer.govuk-footer .govuk-footer__meta {
     justify-content: flex-start;
